# status-page

./: Cargo.toml  README.md
.github/workflows/: release.yml
deploy/: status-page.service
migrations/: 001_initial_schema.sql
src/: auth.rs  config.rs  error.rs  main.rs  sketchy.rs
src/db/: incidents.rs  maintenance.rs  mod.rs  services.rs  settings.rs  uptime.rs
src/models/: incident.rs  maintenance.rs  mod.rs  service.rs  settings.rs  uptime.rs
src/probes/: http.rs  mod.rs  tcp.rs
src/routes/: admin.rs  api.rs  mod.rs  public.rs
src/views/: admin.rs  public.rs
templates/: _base.html  _base_admin.html
templates/admin/: dashboard.html  import_export.html  incident_form.html  incidents_list.html  login.html  maintenance_form.html  maintenance_list.html  onboarding.html  service_form.html  services_list.html  settings.html
templates/public/: index.html  service_detail.html
