[package]
name = "status-page"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "trace", "set-header"] }
tokio = { version = "1", features = ["full"] }
askama = { version = "0.15", features = ["serde_json"] }
askama_web = { version = "0.15", features = ["axum-0.8"] }
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
rand = "0.9"
axum-extra = { version = "0.10", features = ["form"] }
axum-macros = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8"
mime_guess = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
